package dk.sdu.mmmi.cbse.enemysystem;

import dk.sdu.mmmi.cbse.common.data.Entity;
import dk.sdu.mmmi.cbse.common.data.GameData;
import dk.sdu.mmmi.cbse.common.data.World;
import dk.sdu.mmmi.cbse.common.enemy.Enemy;
import dk.sdu.mmmi.cbse.common.services.IGamePluginService;

public class EnemyPlugin implements IGamePluginService {

	private Entity enemy;

	@Override
	public void start(GameData gameData, World world) {
	}

	@Override
	public void stop(GameData gameData, World world) {
		for (Entity e : world.getEntities()) {
			if (e.getClass() == Enemy.class) {
				world.removeEntity(e);
			}
		}
	}
}
